adjust index & tasty food

--- a/classic-beer.html
+++ b/classic-beer.html
@@ -72,18 +72,119 @@
             <h2>淡色拉格啤酒</h2>
         </div>
         <section>
-            <div class="side-beer">
-                <img class="" src="./images/beer_set_pa.png" alt="啤酒示意圖">
+            <div class="side-beer" id="side-beer">
+                <img id="large" src="./images/beer_set_pa.png" alt="啤酒示意圖">
             </div>
             <!-- 中間內容區 -->
             <div class="content">
                 <div class="info-container">
-                    <ul class="info">
+                    <ul class="info la" id="la-info">
                         <li>麥芽香氣/爽口/乾淨/經典</li>
                         <li>德國南部慕尼黑（München）傳統的淡色啤酒， 「拉格Lager」德文為儲存的意思，我們的拉格啤酒在發酵槽中長時間熟成，使風味更成熟圓潤。</li>
                         <li><span>酒精濃度：4.9%</span></li>
                     </ul>
-                    <ul class="side-info">
+                    <ul class="side-info la" id="la-side-info">
+                        <li>苦度 低
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            高
+                        </li>
+                        <li>酒體 輕盈
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            豐滿
+                        </li>
+                        <li>酒色 淡
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            深
+                        </li>
+                    </ul>
+                    <ul class="info pi-pre pre" id="pi-info">
+                        <li>味甘/奇妙花香/經典</li>
+                        <li>1842年誕生於捷克的皮爾森地區，是「皮爾森啤酒的起源」全世界第一款皮爾森式啤酒。超過176年來秉持一貫的堅持，只使用皮爾森地區獨有的軟水、捷克薩茲啤酒花與自產的摩拉維亞淡色大麥麥芽。
+                        </li>
+                        <li><span>酒精濃度：4.5%</span></li>
+                    </ul>
+                    <ul class="side-info pi-pre pre" id="pi-side-info">
+                        <li>苦度 低
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span></span>
+                            高
+                        </li>
+                        <li>酒體 輕盈
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span></span>
+                            豐滿
+                        </li>
+                        <li>酒色 淡
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            深
+                        </li>
+                    </ul>
+                    <ul class="info pa pre" id="pa-info">
+                        <li>溫和/平易近人</li>
+                        <li>使用輕度烘焙的麥芽釀製，酒體顏色介於金黃和琥珀色之間。淡色愛爾啤酒的麥芽和啤酒花風味均衡，其中啤酒花的味道鮮明卻柔和。</li>
+                        <li><span>酒精濃度：5.5%</span></li>
+                    </ul>
+                    <ul class="side-info pa pre" id="pa-side-info">
+                        <li>苦度 低
+                            <span class="active"></span>
+                            <span></span>
+                            <span></span>
+                            高
+                        </li>
+                        <li>酒體 輕盈
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span></span>
+                            豐滿
+                        </li>
+                        <li>酒色 淡
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span></span>
+                            深
+                        </li>
+                    </ul>
+                    <ul class="info st pre" id="st-info">
+                        <li>焦香/咖啡香</li>
+                        <li>烈性黑啤酒，由烘焙過的麥芽、啤酒花、水及酵母所製成，口味較強烈，特點是色澤深褐、酒花苦味重，有明顯的焦香麥芽味，口感偏乾而醇。</li>
+                        <li><span>酒精濃度：8%</span></li>
+                    </ul>
+                    <ul class="side-info st pre" id="st-side-info">
+                        <li>苦度 低
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            高
+                        </li>
+                        <li>酒體 輕盈
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span></span>
+                            豐滿
+                        </li>
+                        <li>酒色 淡
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            <span class="active"></span>
+                            深
+                        </li>
+                    </ul>
+                    <ul class="info we pre" id="we-info">
+                        <li>丁香味/果香濃郁</li>
+                        <li>小麥啤酒是啤酒型式和種類中極具特色和魅力的產品，主要產地集中在德國南部，奧地利和比利時，採用「上層發酵法」，原料為大麥麥芽和50%以上的小麥麥芽，啤酒花，酵母和水。</li>
+                        <li><span>酒精濃度：4.5%</span></li>
+                    </ul>
+                    <ul class="side-info we pre" id="we-side-info">
                         <li>苦度 低
                             <span class="active"></span>
                             <span></span>
@@ -121,34 +222,35 @@
                     <a href="#">了解更多</a>
                 </div>
             </div>
-            <!-- 下方啤酒區 -->
         </section>
+        <!-- 下方啤酒區 -->
         <div class="beer-container">
             <div class="beer">
-                <div class="pic active">
-                    <img src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
+                <div class="pic">
+                    <img class="pics la" src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
                     <div class="txt">淡色拉格啤酒</div>
                 </div>
                 <div class="pic">
-                    <img src="./images/beer_set_pi.png" alt="皮爾森啤酒">
+                    <img class='pics pi' src="./images/beer_set_pi.png" alt="皮爾森啤酒">
                     <div class="txt">皮爾森啤酒</div>
                 </div>
                 <div class="pic">
-                    <img src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
+                    <img class="pics pa" src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
                     <div class="txt">淡色艾爾啤酒</div>
                 </div>
                 <div class="pic">
-                    <img src="./images/beer_set_st.png" alt="司陶特啤酒">
+                    <img class="pics st" src="./images/beer_set_st.png" alt="司陶特啤酒">
                     <div class="txt">司陶特啤酒</div>
                 </div>
                 <div class="pic">
-                    <img src="./images/beer_set_we.png" alt="小麥啤酒">
+                    <img class="pics we" src="./images/beer_set_we.png" alt="小麥啤酒">
                     <div class="txt">小麥啤酒</div>
                 </div>
             </div>
-            <div class="btn">
-                <a href="./index.html">返回首頁</a>
-            </div>
+            <a href="./index.html">
+                <i class="fa-solid fa-angles-left"></i>
+                返回首頁
+            </a>
         </div>
     </div>
     <!-- footer開始 -->
@@ -205,6 +307,7 @@
         </div>
     </div>
     <!-- footer結束 -->
+    <script src="./js/classic-beer.js"></script>
 </body>
 
 </html>
