--- a/takeout.html
+++ b/takeout.html
@@ -89,10 +89,14 @@
                 <span>Meat Lovers Platter</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>990</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>990</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -104,10 +108,14 @@
                 <span>Deep-Fried Platter</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>770</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>770</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -119,10 +127,14 @@
                 <span>Poultry Platter</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>880</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>880</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -134,10 +146,14 @@
                 <span>Assorted German Sausages</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>580</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>580</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -149,10 +165,14 @@
                 <span>Seafood & Cheese Mille-Feuille</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>620</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>620</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -164,10 +184,14 @@
                 <span>Spicy Seafood Salad</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>440</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>440</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -179,10 +203,14 @@
                 <span>Organic Lamb</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>980</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>980</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -194,10 +222,14 @@
                 <span>Miu Pizza</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>450</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>450</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -209,10 +241,14 @@
                 <span>French Onion Soup</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>220</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>220</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -224,10 +260,14 @@
                 <span>Truffle Fries</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>580</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>580</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -239,10 +279,14 @@
                 <span>Fettuccine Carbonara</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>620</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>620</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -254,10 +298,14 @@
                 <span>Spicy Chicken Stir Fry</span>
             </div>
             <div class="btn">
-                <i class="fa-solid fa-dollar-sign"><span>340</span></i>
-                <i class="fa-solid fa-circle-minus"></i>
-                <p class="count">0</p>
-                <i class="fa-solid fa-circle-plus"></i>
+                <div>
+                    <i class="fa-solid fa-dollar-sign"><span>340</span></i>
+                </div>
+                <div class="count">
+                    <i class="fa-solid fa-circle-minus"></i>
+                    <span>0</span>
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
             </div>
         </div>
         <div class="next-btn">
