--- a/food.html
+++ b/food.html
@@ -60,6 +60,83 @@
         </a>
     </div>
     <!-- 立即訂位結束 -->
+    <h1>TASTY FOOD</h1>
+    <!-- 經典啤酒區開始 -->
+    <section class="classic-beer">
+        <div class="title">
+            <div class="pic">
+                <img src="./images/bow.svg" alt="">
+            </div>
+            <div class="txt">
+                <h2>經典啤酒</h2>
+            </div>
+            <div class="tag">
+                <span>CLASSIC BEER</span>
+            </div>
+        </div>
+        <div class="beer-container">
+            <div class="beer">
+                <div class="pic">
+                    <img src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
+                </div>
+                <div class="txt">
+                    <i class="fa-solid fa-thumbs-up">
+                        <h3>淡色拉格啤酒</h3>
+                        <p>清爽<span>/</span>麥芽甜香</p>
+                    </i>
+                </div>
+                <h3 class="name">淡色拉格啤酒</h3>
+            </div>
+            <div class="beer">
+                <div class="pic">
+                    <img src="./images/beer_set_pi.png" alt="皮爾森啤酒">
+                </div>
+                <div class="txt">
+                    <i class="fa-solid fa-thumbs-up">
+                        <h3>皮爾森啤酒</h3>
+                        <p>味甘<span>/</span>奇妙花香</p>
+                    </i>
+                </div>
+                <h3 class="name">皮爾森啤酒</h3>
+            </div>
+            <div class="beer">
+                <div class="pic">
+                    <img src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
+                </div>
+                <div class="txt">
+                    <i class="fa-solid fa-thumbs-up">
+                        <h3>淡色艾爾啤酒</h3>
+                        <p>溫和<span>/</span>平易近人</p>
+                    </i>
+                </div>
+                <h3 class="name">淡色艾爾啤酒</h3>
+            </div>
+            <div class="beer">
+                <div class="pic">
+                    <img src="./images/beer_set_st.png" alt="司陶特啤酒">
+                </div>
+                <div class="txt">
+                    <i class="fa-solid fa-thumbs-up">
+                        <h3>司陶特啤酒</h3>
+                        <p>焦香<span>/</span>咖啡香</p>
+                    </i>
+                </div>
+                <h3 class="name">司陶特啤酒</h3>
+            </div>
+            <div class="beer">
+                <div class="pic">
+                    <img src="./images/beer_set_we.png" alt="小麥啤酒">
+                </div>
+                <div class="txt">
+                    <i class="fa-solid fa-thumbs-up">
+                        <h3>小麥啤酒</h3>
+                        <p>丁香味<span>/</span>果香濃郁</p>
+                    </i>
+                </div>
+                <h3 class="name">小麥啤酒</h3>
+            </div>
+        </div>
+    </section>
     <!-- 圖片跑馬燈區 -->
     <div class="picmarquee">
         <div class="view">
@@ -85,77 +162,6 @@
             </div>
         </div>
     </div>
-    <!-- 經典啤酒區開始 -->
-    <section class="classic-beer">
-        <div class="title">
-            <div class="pic">
-                <img src="./images/bow.svg" alt="">
-            </div>
-            <div class="txt">
-                <h2>經典啤酒</h2>
-            </div>
-            <div class="tag">
-                <span>CLASSIC BEER</span>
-            </div>
-        </div>
-        <div class="beer-container">
-            <div class="beer">
-                <div class="pic">
-                    <img src="./images/beer_set_pa.png" alt="淡色拉格啤酒">
-                </div>
-                <div class="txt">
-                    <i class="fa-solid fa-thumbs-up">
-                        <h3>淡色拉格啤酒</h3>
-                        <p>清爽<span>/</span>麥芽甜香</p>
-                    </i>
-                </div>
-            </div>
-            <div class="beer">
-                <div class="pic">
-                    <img src="./images/beer_set_pi.png" alt="皮爾森啤酒">
-                </div>
-                <div class="txt">
-                    <i class="fa-solid fa-thumbs-up">
-                        <h3>皮爾森啤酒</h3>
-                        <p>味甘<span>/</span>奇妙花香</p>
-                    </i>
-                </div>
-            </div>
-            <div class="beer">
-                <div class="pic">
-                    <img src="./images/beer_set_sa.png" alt="淡色艾爾啤酒">
-                </div>
-                <div class="txt">
-                    <i class="fa-solid fa-thumbs-up">
-                        <h3>淡色艾爾啤酒</h3>
-                        <p>溫和<span>/</span>平易近人</p>
-                    </i>
-                </div>
-            </div>
-            <div class="beer">
-                <div class="pic">
-                    <img src="./images/beer_set_st.png" alt="司陶特啤酒">
-                </div>
-                <div class="txt">
-                    <i class="fa-solid fa-thumbs-up">
-                        <h3>司陶特啤酒</h3>
-                        <p>焦香<span>/</span>咖啡香</p>
-                    </i>
-                </div>
-            </div>
-            <div class="beer">
-                <div class="pic">
-                    <img src="./images/beer_set_we.png" alt="小麥啤酒">
-                </div>
-                <div class="txt">
-                    <i class="fa-solid fa-thumbs-up">
-                        <h3>小麥啤酒</h3>
-                        <p>丁香味<span>/</span>果香濃郁</p>
-                    </i>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- 美味料理區開始 -->
     <section class="delicious-food">
         <div class="title">
@@ -282,7 +288,6 @@
             <ul>
                 <li>
                     <a href="./news.html">最新消息</a>
-
                 </li>
                 <li>
                     <a href="./aboutus.html">關於品牌</a>
