fixed classic beer

--- a/classic-beer.html
+++ b/classic-beer.html
@@ -105,7 +105,7 @@
                     </ul>
                     <ul class="info pi-pre pre" id="pi-info">
                         <li>味甘/奇妙花香/經典</li>
-                        <li>1842年誕生於捷克的皮爾森地區，是「皮爾森啤酒的起源」全世界第一款皮爾森式啤酒。超過176年來秉持一貫的堅持，只使用皮爾森地區獨有的軟水、捷克薩茲啤酒花與自產的摩拉維亞淡色大麥麥芽。
+                        <li>源自1842年捷克的皮爾森地區，是全球第一款皮爾森式啤酒。傳承176年傳統，選用特有軟水、捷克薩茲啤酒花和摩拉維亞淡色大麥麥芽釀造，味甘花香，成為經典。
                         </li>
                         <li><span>酒精濃度：4.5%</span></li>
                     </ul>
@@ -131,7 +131,7 @@
                     </ul>
                     <ul class="info pa pre" id="pa-info">
                         <li>溫和/平易近人</li>
-                        <li>使用輕度烘焙的麥芽釀製，酒體顏色介於金黃和琥珀色之間。淡色愛爾啤酒的麥芽和啤酒花風味均衡，其中啤酒花的味道鮮明卻柔和。</li>
+                        <li>一款溫和且平易近人的啤酒，使用輕度烘焙的麥芽釀製，顏色介於金黃和琥珀色之間。啤酒的麥芽和啤酒花風味均衡，展現出柔和而清爽的口感，是愛爾蘭啤酒的經典之選。</li>
                         <li><span>酒精濃度：5.5%</span></li>
                     </ul>
                     <ul class="side-info pa pre" id="pa-side-info">
@@ -156,7 +156,8 @@
                     </ul>
                     <ul class="info st pre" id="st-info">
                         <li>焦香/咖啡香</li>
-                        <li>烈性黑啤酒，由烘焙過的麥芽、啤酒花、水及酵母所製成，口味較強烈，特點是色澤深褐、酒花苦味重，有明顯的焦香麥芽味，口感偏乾而醇。</li>
+                        <li>烈性黑啤酒，使用烘焙過的麥芽、啤酒花、水和酵母釀製而成。啤酒色澤深褐，帶有焦香麥芽的明顯香氣，口感偏乾而醇，此款是啤酒愛好者追求獨特風味的絕佳選擇。
+                        </li>
                         <li><span>酒精濃度：8%</span></li>
                     </ul>
                     <ul class="side-info st pre" id="st-side-info">
@@ -181,7 +182,7 @@
                     </ul>
                     <ul class="info we pre" id="we-info">
                         <li>丁香味/果香濃郁</li>
-                        <li>小麥啤酒是啤酒型式和種類中極具特色和魅力的產品，主要產地集中在德國南部，奧地利和比利時，採用「上層發酵法」，原料為大麥麥芽和50%以上的小麥麥芽，啤酒花，酵母和水。</li>
+                        <li>特色和魅力的啤酒，主產地德國南部、奧地利和比利時。用「上層發酵法」製作，使用大麥麥芽和50%以上小麥麥芽、啤酒花、酵母和水釀造。丁香味和濃郁果香。</li>
                         <li><span>酒精濃度：4.5%</span></li>
                     </ul>
                     <ul class="side-info we pre" id="we-side-info">
