--- a/aboutus.html
+++ b/aboutus.html
@@ -96,17 +96,92 @@
                     讓餐點與啤酒完美結合。<br>
                 </h2>
                 <p>
-                    以『啤酒』為中心，發展出餐飲品牌：
-                    『MIU BEERHOUSE 喵 啤酒餐廳』、
-                    『MIU YAKINIKU 喵 燒肉屋』。
-                    12款啤酒從工廠新鮮直送，配上豐富的美味料理，
-                    綻出啤酒多元生活享受，<br>引領全新時尚飲酒態度！
+                    以啤酒為中心，發展出品牌：『MIU BEER餐廳』<br>
+                    品味美食的藝術，源自於對美好滋味的追求。輕啜一口濃郁的啤酒，讓微醺的愉悅感籠罩心頭，彷彿與時光對話。現在，我們將這份美好延伸至餐桌上，打造一場啤酒與美食的盛宴。<br>
                 </p>
             </div>
         </div>
     </section>
     <!-- 上半部結束 -->
+    <!-- 啤酒分隔線 -->
+    <div class="little"></div>
+    <!-- 時間線開始 -->
+    <section class="ourstory">
+        <h3 class="ourstory-title">OUR STORY</h3>
+        <div class="timeline-box">
+            <ul class="timeline">
+                <li class="event spring">
+                    <h4>MIU BEER 誕生</h4>
+                    <p>熱情與創意交織，誕生了 MIU BEER 的獨特魅力，於2021年04月開幕！</p>
+                </li>
+                <li class="event classic">
+                    <h4>MIU BEER 推出 Pale Ale</h4>
+                    <p>嚐一口經典麥味的 Pale Ale，瞬間愛上這份獨特風味。</p>
+                </li>
+                <li class="event summer">
+                    <h4>MIU BEER 不負眾望</h4>
+                    <p>精湛的釀酒工藝，成為啤酒界的頂尖之作，勇奪國際賽冠軍！</p>
+                </li>
+                <li class="event newbeer">
+                    <h4>MIU IPA 重磅登場</h4>
+                    <p>強勁的 IPA，帶來濃郁的果香與麥味，征服啤迷的味蕾。</p>
+                </li>
+                <li class="event winter">
+                    <h4>MIU BEER 挺過疫情，再創巔峰</h4>
+                    <p>困境中堅持不懈，MIU BEER 憑藉團隊的堅韌精神，<br>再度綻放光芒，挺過疫情！</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!-- 經營區開始 -->
+    <section class="owned">
+        <h3>FAMILY OWNED & OPERATED</h3>
+        <div class="owned-card">
+            <div class="pic">
+                <img src="./images/about_owner_andy_one.png" alt="經營者Andy">
+            </div>
+            <div class="txt">
+                <p>作為一名釀酒者，我的追求不僅僅停留在創造美味的酒品上，更在於追求品質的卓越。我注重每一個細節，從原材料的選擇、釀造過程的控制，到最終的品鑒評估，都力求做到最好。我相信只有對釀酒充滿熱情並堅持追求品質，才能釀出真正令人驚艷的佳釀。除此之外，我也喜歡與其他釀酒者交流分享，不斷學習成長。在這個不斷變化的釀酒界，我願意保持開放心態，不斷探索創新，為大家帶來更多驚喜。<span>----Andy
+                        Smith</span>
+                </p>
+            </div>
+        </div>
+        <div class="owned-card dad">
+            <div class="pic">
+                <img src="./images/about_ouwner_daddy_one.png" alt="經營者父親">
+            </div>
+            <div class="txt">
+                <p>身為擁有多年釀酒經驗的行家，對於釀酒的每個細節都極為謹慎。我的釀酒之路始於熱愛，持續不斷地追求卓越使我成為一名技藝精湛的釀酒者。在這段旅程中，我學會了如何選擇最優質的原材料、精確地掌控釀造過程並創新酒品風味。我的釀酒作品時常受到肯定，這驅使我不斷挑戰自我，探索更多可能性。釀酒對我而言不僅是一項技藝，更是一種對美味的熱情與堅持。我期待將這份熱愛透過每一杯酒分享給更多喜愛品味的人們。
+                    <span>----John Smith</span>
+                </p>
+            </div>
+        </div>
+    </section>
 
+    <!-- 加入我們 開始 -->
+    <article class="joinus">
+        <h3 class="joinus-title">JOIN US</h3>
+        <div class="pic">
+            <img src="./images/about_joinus.jpeg" alt="MIU Team">
+        </div>
+        <div class="txt">
+            <h4>加入我們，成就精釀啤酒的熱情與創意！</h4>
+            <p>
+                我們致力於創造獨特的精釀啤酒體驗，提供最優質的服務給每一位顧客。
+                如果你喜歡啤酒的獨特風味，熱愛與人互動，並且樂於接受新挑戰，那你將在這找到屬於自己的舞台！
+            </p>
+            <p>
+                無論你是經驗豐富的釀酒師，還是熱愛服務業的初心者，我們都歡迎你的加入。這裡有不斷學習成長的機會，也有團隊合作共同進步的氛圍。
+                我們相信，每位成員都是我們成功的關鍵，因此我們會用最優厚的薪資和福利回饋你的付出。
+            </p>
+            <p>
+                此外，你還可以享受彼此之間的友善關係、自由發揮創意的空間，以及成就感的滿足。
+                加入我們，成為這個充滿激情的 MIU BEER 大家庭的一員。<br>
+                讓我們攜手共同打造令人驚喜的啤酒體驗，帶給顧客一場美好的時光！
+            </p>
+            <div class="contactus"></div>
+        </div>
+    </article>
     <!-- footer開始 -->
     <footer>
         <div class="footer-pic">
@@ -122,7 +197,6 @@
                 </li>
                 <li>
                     <a href="./aboutus.html">關於品牌</a>
-
                 </li>
                 <li>
                     <a href="./classic-beer.html">啤酒介紹</a>
