--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     <div class="news-card-container">
         <!-- 活動卡片區按鈕開始 -->
         <div class="arrow">
-            <a href="#" class="arrow-left">
-                <i class="fa-solid fa-angle-left"></i>
-            </a>
+            <div class="arrow-left">
+                <i class="fa-solid fa-angle-left arrow-left"></i>
+            </div>
         </div>
         <div class="arrow">
-            <a href="#" class="arrow-right">
+            <div href="#" class="arrow-right">
                 <i class="fa-solid fa-angle-right"></i>
-            </a>
+            </div>
         </div>
         <!-- 活動卡片區按鈕結束 -->
         <div class="news-card">
@@ -121,6 +121,21 @@
             </a>
         </div>
         <div class="news-card">
+            <a href="./news-page.html">
+                <div class="card-pic">
+                    <img src="./images/index_newsbeer.png" alt="">
+                </div>
+                <div class="card-txt">
+                    </h2>
+                    每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組
+                    </h2>
+                </div>
+                <div class="tag">
+                    2023/09/09
+                </div>
+            </a>
+        </div>
+        <div class="news-card side">
             <a href="./news-page.html">
                 <div class="card-pic">
                     <img src="./images/index_newsbeer.png" alt="">
@@ -260,6 +275,28 @@
                 #來自土耳其的Nicholas
             </div>
         </div>
+        <div class="feedback-card">
+            <div class="pic">
+                <img src="./images/index_orange.jpeg" alt="顧客好評">
+            </div>
+            <div class="txt">
+                <p>每週必來一次<br>我都點最大杯！</p>
+            </div>
+            <div class="tag">
+                #來自台灣女婿 Jason
+            </div>
+        </div>
+        <div class="feedback-card">
+            <div class="pic">
+                <img src="./images/index_gray.jpeg" alt="顧客好評">
+            </div>
+            <div class="txt">
+                <p>怎麼辦？<br>找不到比這更好的啤酒了！</p>
+            </div>
+            <div class="tag">
+                #來自比利時的Hank
+            </div>
+        </div>
     </div>
     <!-- 好評推薦結束 -->
     <!-- footer開始 -->
@@ -316,6 +353,8 @@
         </div>
     </div>
     <!-- footer結束 -->
+
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
