--- a/food.html
+++ b/food.html
@@ -283,6 +283,7 @@
             <a href="index.html" target="_blank">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
+            <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
         </div>
         <div class="footer txt">
             <ul>
