--- a/index.html
+++ b/index.html
@@ -241,62 +241,64 @@
     <div class="feedback">
         <h2>MIU 好評推薦</h2>
     </div>
-    <div class="feedback-container">
-        <div class="feedback-card">
-            <div class="pic">
-                <img src="./images/index_yellow.jpeg" alt="顧客好評">
-            </div>
-            <div class="txt">
-                <p>我最喜歡Pale Ale！<br>而且在餐廳看球賽很刺激</p>
-            </div>
-            <div class="tag">
-                #來自加拿大的Renee
-            </div>
-        </div>
-        <div class="feedback-card">
-            <div class="pic">
-                <img src="./images/index_green.jpeg" alt="顧客好評">
-            </div>
-            <div class="txt">
-                <p>小孩才做選擇，<br>每種口味我都要！</p>
-            </div>
-            <div class="tag">
-                #來自德國的Hanna
-            </div>
-        </div>
-        <div class="feedback-card">
-            <div class="pic">
-                <img src="./images/index_red.jpeg" alt="顧客好評">
-            </div>
-            <div class="txt">
-                <p>每年的聖誕節<br>我都特別來這喝啤酒兼送禮！</p>
-            </div>
-            <div class="tag">
-                #來自土耳其的Nicholas
-            </div>
-        </div>
-        <div class="feedback-card">
-            <div class="pic">
-                <img src="./images/index_orange.jpeg" alt="顧客好評">
-            </div>
-            <div class="txt">
-                <p>每週必來一次<br>我都點最大杯！</p>
-            </div>
-            <div class="tag">
-                #來自台灣女婿 Jason
-            </div>
-        </div>
-        <div class="feedback-card">
-            <div class="pic">
-                <img src="./images/index_gray.jpeg" alt="顧客好評">
-            </div>
-            <div class="txt">
-                <p>怎麼辦？<br>找不到比這更好的啤酒了！</p>
-            </div>
-            <div class="tag">
-                #來自比利時的Hank
-            </div>
-        </div>
+    <div class="sliderBoard">
+        <ul class="feedback-container">
+            <li class="feedback-card">
+                <div class="pic">
+                    <img src="./images/index_yellow.jpeg" alt="顧客好評">
+                </div>
+                <div class="txt">
+                    <p>我最喜歡Pale Ale！<br>而且在餐廳看球賽很刺激</p>
+                </div>
+                <div class="tag">
+                    #來自加拿大的Renee
+                </div>
+            </li>
+            <li class="feedback-card">
+                <div class="pic">
+                    <img src="./images/index_green.jpeg" alt="顧客好評">
+                </div>
+                <div class="txt">
+                    <p>小孩才做選擇，<br>每種口味我都要！</p>
+                </div>
+                <div class="tag">
+                    #來自德國的Hanna
+                </div>
+            </li>
+            <li class="feedback-card">
+                <div class="pic">
+                    <img src="./images/index_red.jpeg" alt="顧客好評">
+                </div>
+                <div class="txt">
+                    <p>每年的聖誕節<br>我都特別來這喝啤酒兼送禮！</p>
+                </div>
+                <div class="tag">
+                    #來自土耳其的Nicholas
+                </div>
+            </li>
+            <li class="feedback-card">
+                <div class="pic">
+                    <img src="./images/index_orange.jpeg" alt="顧客好評">
+                </div>
+                <div class="txt">
+                    <p>每週必來一次<br>我都點最大杯！</p>
+                </div>
+                <div class="tag">
+                    #來自台灣女婿 Jason
+                </div>
+            </li>
+            <li class="feedback-card">
+                <div class="pic">
+                    <img src="./images/index_gray.jpeg" alt="顧客好評">
+                </div>
+                <div class="txt">
+                    <p>怎麼辦？<br>找不到比這更好的啤酒了！</p>
+                </div>
+                <div class="tag">
+                    #來自比利時的Hank
+                </div>
+            </li>
+        </ul>
     </div>
     <!-- 好評推薦結束 -->
     <!-- footer開始 -->
@@ -305,16 +307,15 @@
             <a href="index.html" target="_blank">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
+            <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
         </div>
         <div class="footer txt">
             <ul>
                 <li>
                     <a href="./news.html">最新消息</a>
-
                 </li>
                 <li>
                     <a href="./aboutus.html">關於品牌</a>
-
                 </li>
                 <li>
                     <a href="./classic-beer.html">啤酒介紹</a>
