--- a/takeout.html
+++ b/takeout.html
@@ -308,9 +308,7 @@
                 </div>
             </div>
         </div>
-        <div class="next-btn">
-            <a href="./shopping-cart.html">確認</a>
-        </div>
+        <a class="next-btn" href="./shopping-cart.html">確認</a>
     </div>
     <!-- 食物卡片區結束 -->
     <!-- footer開始 -->
