--- a/news.html
+++ b/news.html
@@ -64,20 +64,12 @@
     <div class="marquee">
         <p>即日起，平日午餐來店享小杯啤酒任選一杯</p>
     </div>
-    <!-- 頂端banner開始 -->
     <div class="top">
-        <div class="top-mask">
-            <span>Don't Worry Beer Happy ♡</span>
-        </div>
-    </div>
-    <!-- 頂端banner結束 -->
-    <!-- 內文區開始 -->
-    <div class="news-mask">
         <h1>
             NEWS
-            <span>最新消息</span>
         </h1>
     </div>
+    <!-- 內文區開始 -->
     <div class="news-card-container">
         <div class="news-card">
             <a href="#">
@@ -115,7 +107,7 @@
             </a>
         </div>
         <div class="news-card">
-            <a href="news-page.html">
+            <a href="#">
                 <img src="./images/news_beercup.png" alt="啤酒大賽">
                 <span>
                     每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組喲！
@@ -139,6 +131,7 @@
             <a href="index.html" target="_blank">
                 <img src="./images/miu_logo_gold.svg" alt="Miu Beer">
             </a>
+            <p>本網站為緯育TibaMe前端班第86期學員專題作品，<br>本平台僅供學習、展示之用。</p>
         </div>
         <div class="footer txt">
             <ul>
